--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@googlemaps/react-wrapper": "^1.1.34",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@mui/styles": "^5.10.10",
     "@szhsin/react-menu": "^2.3.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
